tests/type_errors/min_non_ord.nos
# expect_error: does not implement Ord
# min requires Ord trait
main() = min(x => x, y => y)
